service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-v1
  namespace: demo
spec:
  selector:
    app: myapp
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30001   
  type: NodePort
