service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-v2
  namespace: demo
spec:
  selector:
    app: myapp
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30002   
  type: NodePort
