virtualservice-0-100.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-vs
  namespace: demo
spec:
  hosts:
  - "*"
  gateways:
  - myapp-gateway
  http:
  - route:
    - destination:
        host: myapp.demo.svc.cluster.local
        subset: v1
      weight: 0
    - destination:
        host: myapp.demo.svc.cluster.local
        subset: v2
      weight: 100
